improved notebook updated parameter range for SampleChamber

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -38,6 +38,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "This will\n",
+    "1. mount your Google Drive\n",
+    "1. pull the latest version of ``opinion_dynamics`` from GitHub\n",
+    "1. add ``opinion_dynamics`` to path\n",
+    "1. install latest ``tqdm`` for ``tenumerate`` function.\n",
+    "1. make `.cache` and `.output` in your Google Drive under `My Drive > Colab Notebooks > opdynamics`\n",
+    "1. create symlinks between Colab's temporary local `.cache` and `.output` and the Google Drive folders for persistence\n",
+    "\n",
+    "> Note:\n",
+    "> 1. After installing ``tqdm`` it may ask you to restart runtime. You probably don't have to, but if a cell gives an error about ``tenumerate``, just restart the runtime.\n",
+    "> 1. Creating symlinks will fail when running the cell again. This is expected."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
@@ -63,7 +85,7 @@
     "    GIT_REPOSITORY = \"opinion_dynamics\" \n",
     "    GIT_PATH = \"https://\" + GIT_TOKEN + \"@github.com/\" + GIT_USERNAME + \"/\" + GIT_REPOSITORY + \".git\"\n",
     "    !rm -rf ./temp\n",
-    "    !git clone \"{GIT_PATH}\" ./temp\n",
+    "    !git clone --quiet \"{GIT_PATH}\" ./temp\n",
     "\n",
     "    # add to path\n",
     "    import sys\n",
@@ -208,6 +230,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    " Symbol     | Variable | Keyword      | Meaning                                   | Range ($\\mathbb{R}$)\n",
+    "------------|----------|--------------|-------------------------------------------|---------------------\n",
+    " N          | N        | ``N``        | Number of agents                          | $>=1$\n",
+    " m          | m        | ``m``        | Number of other agents to interact with   | $[1,N)$\n",
+    " $\\alpha$   | α        | ``alpha``    | controversialness of issue                | $>0$\n",
+    " $K$        | K        | ``K``        | social interaction strength               | $>0$\n",
+    " $\\epsilon$ | ε        | ``epsilon``  | minimum activity level with another agent | $>0$\n",
+    " $\\gamma$   | Υ        | ``gamma``    | power law decay of activity distribution  | $[-\\infty, \\infty]$\n",
+    " $\\beta$    | β        | ``beta``     | power law decay of connection probability | $[-\\infty, \\infty]$\n",
+    " $r$        | r        | ``r``        | probability of a mutual interaction       | $[0,1]$ \n",
+    " "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
@@ -219,14 +263,14 @@
     }
    },
    "source": [
-    "num_agents = 1000\n",
-    "m = 10  # number of other agents to interact with\n",
-    "alpha = 3  # controversialness of issue (sigmoidal shape)\n",
-    "K = 3  # social interaction strength\n",
-    "epsilon = 1e-2  # minimum activity level with another agent\n",
-    "gamma = 2.1  # power law distribution param\n",
-    "beta = 3  # power law decay of connection probability\n",
-    "r = 0.5 # probability of a mutual interaction\n",
+    "N = 1000\n",
+    "m = 10\n",
+    "alpha = 3\n",
+    "K = 3\n",
+    "epsilon = 1e-2\n",
+    "gamma = 2.1\n",
+    "beta = 3\n",
+    "r = 0.5\n",
     "activity_distribution = negpowerlaw"
    ],
    "execution_count": null,
@@ -257,7 +301,7 @@
     }
    },
    "source": [
-    "ec = EchoChamber(num_agents, m, K, alpha)\n",
+    "ec = EchoChamber(N, m, K, alpha)\n",
     "vis = VisEchoChamber(ec)"
    ],
    "execution_count": null,
@@ -514,7 +558,7 @@
    },
    "source": [
     "filename = ec.save()\n",
-    "new_ec = EchoChamber(num_agents, m, K, alpha)\n",
+    "new_ec = EchoChamber(N, m, K, alpha)\n",
     "new_ec.set_activities(activity_distribution, gamma, epsilon)\n",
     "new_ec.set_connection_probabilities(beta=beta)\n",
     "new_ec.set_social_interactions(0.5, lazy=True) # note only the `r` is the important parameter\n",
@@ -591,7 +635,7 @@
     "\n",
     "- $K = 3$\n",
     "- $\\alpha = 0.05$\n",
-    "- $beta = 2$"
+    "- $\\beta = 2$"
    ]
   },
   {
@@ -630,7 +674,7 @@
     "\n",
     "- $K = 3$\n",
     "- $\\alpha = 3$\n",
-    "- $beta = 0$"
+    "- $\\beta = 0$"
    ]
   },
   {
@@ -667,7 +711,7 @@
     "\n",
     "- $K = 3$\n",
     "- $\\alpha = 3$\n",
-    "- $beta = 3$"
+    "- $\\beta = 3$"
    ]
   },
   {
@@ -1169,8 +1213,6 @@
     }
    },
    "source": [
-    "   \n",
-    "\n",
     "# Set up the subplot grid\n",
     "f = plt.figure(figsize=(6, 6))\n",
     "gs = plt.GridSpec(6, 6)\n",
@@ -1374,8 +1416,33 @@
    "source": [
     "Add noise to the system\n",
     "\n",
-    "$\\dot{x}_i= -x_i + K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha x_j)  + D [nudge or noise]$"
+    "$\\dot{x}_i= -x_i + K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha x_j)  + D [\\rm nudge \\ or \\ noise]$\n",
+    "\n",
+    "\n",
+    " Symbol      | Keyword      | Class (inherits from)            | Meaning                                                         | Range ($\\mathbb{R}$)\n",
+    "-------------|--------------|----------------------------------|----------------------------------------------------------|---------------------\n",
+    " $D$         | ``D``        |``NoisyEchoChamber(EchoChamber)`` | Strength of noise/nudge                                         | $>=0$\n",
+    " $P(-\\beta)$ | ``p_opp``    |``ConnChamber(EchoChamber)``      | Probability of interacting with an agent of opposing opinion    | $[0,1]$\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Open system (external noise)\n",
+    "\n",
+    "$\\dot{x}_i = K \\cdot \\sum_{j=1} A_{ij}(t) \\cdot \\tanh{(\\alpha \\cdot x_j)} + D \\cdot \\xi (t)$\n",
+    "\n",
+    " Symbol        | Variable | Keyword      | Class (inherits from)             | Meaning\n",
+    "---------------|----------|--------------|-----------------------------------|---------------\n",
+    " $\\xi(t)$      | -        | -            | ``OpenChamber(NoisyEchoChamber)`` | [Wiener process](https://en.wikipedia.org/wiki/Wiener_process)\n",
+    " $\\dot{\\xi}$   | -        | -            | ``OpenChamber(NoisyEchoChamber)`` | Derivative $\\mathcal{N}(0,\\sqrt{dt})$\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -1491,7 +1558,6 @@
     }
    },
    "source": [
-    "from opdynamics.visualise import show_noise_panel\n",
     "kwargs = dict(N=1000,\n",
     "              m=10,\n",
     "              T=10,\n",
@@ -1730,9 +1796,19 @@
    "source": [
     "## Contrastive noise\n",
     "\n",
-    "Noise comes from exposing each agent to a random other agent, $x_k$) for $k$ time steps.\n",
+    "Noise comes from exposing each agent to a random other agent, $x_k$, independent of $\\beta$.\n",
     "\n",
-    "$\\dot{x}_i= -x_i + K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha_1 x_j)  + D (\\tanh(\\alpha_2 (x_i - x_k)))$\n"
+    "Either\n",
+    "1. Contrast own opinion with another\n",
+    "    $\\dot{x}_i = K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha_1 x_j)  + D (\\tanh(\\alpha_2 (x_i - x_k)))$\n",
+    "1. Show another agent's opinion\n",
+    "    $\\dot{x}_i = K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha_1 x_j)  + D (\\tanh(\\alpha_2 (x_k)))$\n",
+    "\n",
+    " Symbol        | Keyword      | Class (inherits from)                  | Meaning\n",
+    "---------------|--------------|----------------------------------------|---------------\n",
+    " $x_k$         | ``k_steps``  | ``ConstrastChamber(NoisyEchoChamber)`` | Another agent chosen every $k$ time steps.\n",
+    " $\\alpha_2$    | ``alpha_2``  | ``ConstrastChamber(NoisyEchoChamber)`` | Scaling of agent's opinion (or difference of opinions)\n",
+    "\n"
    ]
   },
   {
@@ -1845,12 +1921,26 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    " Symbol      | Keyword      | Class (inherits from)            | Meaning                                                         | Range ($\\mathbb{R}$)\n",
+    "-------------|--------------|----------------------------------|----------------------------------------------------------|---------------------\n",
+    " $P(-\\beta)$ | ``p_opp``    |``ConnChamber(EchoChamber)``      | Probability of interacting with an agent of opposing opinion    | $[0,1]$\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "source": [
     "#@title Dynamic connections { run: \"auto\", vertical-output: true }\n",
     "\n",
     "# polar opinions\n",
-    "num_agents = 1000\n",
+    "N = 1000\n",
     "m = 10  # number of other agents to interact with\n",
     "alpha = 3  # controversialness of issue (sigmoidal shape)\n",
     "K = 3  # social interaction strength\n",
@@ -1864,7 +1954,7 @@
     "\n",
     "p_opp = 0. #@param {type:\"slider\", min:0, max:1, step:0.05}\n",
     "\n",
-    "cc = ConnChamber(num_agents, m, K, alpha)\n",
+    "cc = ConnChamber(N, m, K, alpha)\n",
     "cc.set_activities(activity_distribution, gamma, epsilon)\n",
     "cc.set_connection_probabilities(beta=beta, p_opp=p_opp)\n",
     "cc.set_social_interactions(r, lazy=True) # note only the `r` is the important parameter\n",
@@ -1913,22 +2003,51 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Add a \"population opinion\" term that captures the Lindeberg–Lévy Central Limit Theorem.\n",
+    "\n",
+    "\n",
+    "$\\dot{x}_i = K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha_1 x_j)  + D \\cdot \\sqrt {n}\\left({\\bar{X}}_{n}-\\mu \\right)$\n",
+    "\n",
+    "where $X$ is a random sample and $\\bar{X}_{n}$ is the sample mean for $n$ random samples.\n",
+    "\n",
+    "According to CLT, the means of random samples are normally distributed.\n",
+    "\n",
+    "By substracting the true (or accurate estimate of the ) mean, $\\mu$, and scaling by sample size ($\\sqrt{n}$),\n",
+    "the normal distribution is centered on $0$.\n",
+    "\n",
+    "$\\sqrt {n}\\left({\\bar{X}}_{n}-\\mu \\right) \\rightarrow \\mathcal{N}\\left(0,\\sigma^{2}\\right)$\n",
+    "\n",
+    " Symbol      | Keyword          | Class (inherits from)            | Meaning                                                         | Range ($\\mathbb{R}$)\n",
+    "-------------|------------------|----------------------------------|----------------------------------------------------------|---------------------\n",
+    " $n$         | ``sample_size``  |``SampleChamber(NoisyEchoChamber, ConnChamber)``      | Number of opinions to sample from all agents    | $[0,N]$\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "source": [
-    "#@title CLT { run: \"auto\", vertical-output: true }\n",
+    "#@title CLT playground { run: \"auto\", vertical-output: true }\n",
     "\n",
     "logging_level = logging.getLogger().getEffectiveLevel()\n",
     "logging.getLogger().setLevel(logging.WARNING)\n",
     "\n",
     "# polar opinions\n",
-    "num_agents = 1000\n",
-    "m = 10\n",
-    "α = 3\n",
-    "K = 3\n",
-    "ε = 1e-2\n",
-    "Υ = 2.1\n",
-    "β = 3\n",
-    "r = 0.5\n",
+    "N = 1000 #@param {type:\"integer\"}\n",
+    "m = 10 #@param {type:\"integer\"}\n",
+    "α = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "K = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "log10ε = -2 #@param {type:\"slider\", min:-3, max:0, step:-1}\n",
+    "ε = 1**log10ε\n",
+    "Υ = 2.1 #@param {type:\"slider\", min:0, max:3, step:0.1}\n",
+    "β = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "r = 0.5 #@param {type:\"slider\", min:0, max:1, step:0.1}\n",
     "activity_distribution = negpowerlaw\n",
     "dt = 0.01\n",
     "T = 10\n",
@@ -1937,24 +2056,26 @@
     "sample_size = 10 #@param {type:\"slider\", min:1, max:100, step:1}\n",
     "\n",
     "iterations = 1 #@param {type:\"slider\", min:1, max:20, step:1}\n",
+    "auto_run = False #@param {type:\"boolean\"}\n",
     "\n",
-    "fig, ax = plt.subplots(1, 2, gridspec_kw=dict(width_ratios=[1,0.1]), sharey=True)\n",
-    "fig.subplots_adjust(wspace=0.1, hspace=0.5)\n",
-    "palette = sns.color_palette(\"husl\", n_colors=iterations)\n",
-    "for i in range(iterations):\n",
-    "    sc = SampleChamber(num_agents, m, K, α)\n",
-    "    sc.set_activities(activity_distribution, Υ, ε)\n",
-    "    sc.set_connection_probabilities(β)\n",
-    "    sc.set_social_interactions(r)\n",
-    "    sc.set_dynamics(D, sample_size)\n",
-    "    sc.run_network(dt, T, method='Euler')\n",
+    "if auto_run:\n",
+    "    fig, ax = plt.subplots(1, 2, gridspec_kw=dict(width_ratios=[1,0.1]), sharey=True)\n",
+    "    fig.subplots_adjust(wspace=0.1, hspace=0.5)\n",
+    "    palette = sns.color_palette(\"husl\", n_colors=iterations)\n",
+    "    for i in range(iterations):\n",
+    "        sc = SampleChamber(N, m, K, α)\n",
+    "        sc.set_activities(activity_distribution, Υ, ε)\n",
+    "        sc.set_connection_probabilities(β)\n",
+    "        sc.set_social_interactions(r)\n",
+    "        sc.set_dynamics(D, sample_size)\n",
+    "        sc.run_network(dt, T, method='Euler')\n",
     "\n",
-    "    vis = VisEchoChamber(sc)\n",
-    "    vis.show_opinions(color_code='line', ax=ax[0])\n",
-    "    vis.show_opinions_snapshot(ax=ax[1], vertical=True,\n",
-    "                             kde_kws=dict(bw=0.1, color=palette[i]))\n",
+    "        vis = VisEchoChamber(sc)\n",
+    "        vis.show_opinions(color_code='line', ax=ax[0])\n",
+    "        vis.show_opinions_snapshot(ax=ax[1], vertical=True,\n",
+    "                                kde_kws=dict(bw=0.1), color=palette[i])\n",
     "\n",
-    "ax[0].set_ylim(-5,5)\n",
+    "    ax[0].set_ylim(-5,5)\n",
     "\n",
     "logging.getLogger().setLevel(logging_level)"
    ],
@@ -1966,6 +2087,18 @@
    },
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Run parameter sweep"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -1984,11 +2117,11 @@
     "              beta=1,\n",
     "              alpha=3,\n",
     "              r=0.65,\n",
-    "              k_steps=10,\n",
-    "              cls=SampleChamber\n",
+    "              cls=SampleChamber,\n",
+    "              method='Euler'\n",
     "             )\n",
     "\n",
-    "D_range = np.round(np.arange(0.0, 5, 1), 3)\n",
+    "D_range = np.round(np.arange(0.0, 5.0001, 1), 3)\n",
     "\n",
     "other_vars = {\n",
     "    'D':{\n",
@@ -1996,17 +2129,61 @@
     "        'title': 'D',\n",
     "    },\n",
     "    'sample_size':{\n",
-    "        'range':[0.01, 0.1, 1, 10],\n",
+    "        'range':[1, 25, 50, 100],\n",
     "        'title':'$n$',\n",
     "    },\n",
+    "    'm':{\n",
+    "        'range':[1, 10, 20],\n",
+    "    },\n",
+    "    'alpha':{\n",
+    "        'range': [1,2,3]\n",
+    "    },\n",
+    "    'beta':{\n",
+    "        'range': [0,1,2,3]\n",
+    "    },\n",
+    "    'K':{\n",
+    "        'range': [1,2,3]\n",
+    "    },\n",
+    "    'r':{\n",
+    "        'range': [0,0.5,1]\n",
+    "    }\n",
     "}\n",
     "\n",
     "noise_start = 0\n",
     "\n",
     "df = Simulation.run_product(other_vars,\n",
     "                            noise_start=noise_start,\n",
+    "                            cache=False,\n",
+    "                            cache_sim=True,\n",
     "                            **kwargs)\n",
     "logging.getLogger().setLevel(logging_level)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### plot"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "grid_kwargs = dict(sharex=False, sharey=False, margin_titles=True, legend_out=True)\n",
+    "kde_kwargs = dict(bw=0.01)"
    ],
    "metadata": {
     "collapsed": false,
@@ -2020,8 +2197,56 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "grid_kwargs = dict(sharex=False, sharey=False, margin_titles=True, legend_out=True)\n",
-    "kde_kwargs = dict(bw=0.01)\n",
+    "#@title choose df { run: \"auto\", vertical-output: true }\n",
+    "\n",
+    "N = 1000 #@param {type:\"integer\"}\n",
+    "m = 10 #@param {type:\"integer\"}\n",
+    "α = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "K = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "log10ε = -2 #@param {type:\"slider\", min:-3, max:0, step:-1}\n",
+    "ε = 1**log10ε\n",
+    "Υ = 2.1 #@param {type:\"slider\", min:0, max:3, step:0.1}\n",
+    "β = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
+    "r = 0.5 #@param {type:\"slider\", min:0, max:1, step:0.1}\n",
+    "\n",
+    "default_df = df[np.logical_and(df['N'] == 1000,\n",
+    "                               df['m'] == 10,\n",
+    "                               df['alpha'] == 3,\n",
+    "                               df['K'] == 2,\n",
+    "                               df['beta'] == 3,\n",
+    "                               df['r'] == 0.5,\n",
+    "                               )]\n",
+    "\n",
+    "default_df.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "g = show_opinion_grid(default_df,\n",
+    "                      ['D','sample_size'], grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
+    "g.add_legend(fontsize='large')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "g = show_opinion_grid(df, ['D','sample_size'], grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
     "g.add_legend(fontsize='large')"
    ],
@@ -2037,8 +2262,38 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "g = show_opinion_grid(df, [x for x in other_vars.keys() if x != \"D\"],\n",
-    "                    grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
+    "g = sns.relplot(x=\"opinion\", y=\"D\", hue=\"sample_size\", size=\"alpha\", style=\"beta\",\n",
+    "                kind='scatter', data=df)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "g = sns.pairplot(df, vars=[\"opinion\"]+list(other_vars.keys()), corner=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "g = show_opinion_grid(df,\n",
+    "                      [x for x in other_vars.keys() if x != \"D\"],\n",
+    "                      grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
     "g.map(sns.scatterplot, \"opinion\", \"D\", color='k', alpha=0.5, ec='None', s=1)"
    ],
    "metadata": {
@@ -2057,7 +2312,7 @@
     "\n",
     "from opdynamics.utils.accuracy import precision_and_scale\n",
     "\n",
-    "sc = SampleChamber(num_agents, m, K, alpha)\n",
+    "sc = SampleChamber(N, m, K, alpha)\n",
     "\n",
     "D_xi = 1 #@param {type:\"slider\", min:0.1, max:2, step:0.1}\n",
     "\n",
