changes to notebook for better vis of multiple parameters

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -34,14 +34,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Colab Setup"
+    "## Imports and settings"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "This will\n",
-    "1. mount your Google Drive\n",
+    "If in a Colab notebook, this will\n",
+    "1. mount your Google Drive (by asking for an authorization code)\n",
     "1. pull the latest version of ``opinion_dynamics`` from GitHub\n",
     "1. add ``opinion_dynamics`` to path\n",
     "1. install latest ``tqdm`` for ``tenumerate`` function.\n",
@@ -72,6 +72,7 @@
     }
    },
    "source": [
+    "#@title Colab Setup { display-mode: \"form\" }\n",
     "try:\n",
     "    # connect GDrive for retrieving/saving results\n",
     "    from google.colab import drive\n",
@@ -91,7 +92,7 @@
     "    import sys\n",
     "    sys.path.append('./temp')\n",
     "    # need latest tqdm version for tenumerate\n",
-    "    !pip install --upgrade tqdm\n",
+    "    !pip install -q --upgrade tqdm\n",
     "    # create symlink between a Drive folder and the cache for persistence between sessions\n",
     "    import os\n",
     "    try:\n",
@@ -109,17 +110,6 @@
    "outputs": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "## Imports and settings"
-   ]
-  },
-  {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
@@ -132,6 +122,7 @@
     }
    },
    "source": [
+    "#@title Imports and settings { display-mode: \"form\" }\n",
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -1804,6 +1795,7 @@
     "1. Show another agent's opinion\n",
     "    $\\dot{x}_i = K \\sum^{N}_{j=1} A_{ij} (t)  \\tanh(\\alpha_1 x_j)  + D (\\tanh(\\alpha_2 (x_k)))$\n",
     "\n",
+    "\n",
     " Symbol        | Keyword      | Class (inherits from)                  | Meaning\n",
     "---------------|--------------|----------------------------------------|---------------\n",
     " $x_k$         | ``k_steps``  | ``ConstrastChamber(NoisyEchoChamber)`` | Another agent chosen every $k$ time steps.\n",
@@ -2130,16 +2122,18 @@
     "    },\n",
     "    'sample_size':{\n",
     "        'range':[1, 25, 50, 100],\n",
-    "        'title':'$n$',\n",
+    "        'title':'n',\n",
     "    },\n",
     "    'm':{\n",
     "        'range':[1, 10, 20],\n",
     "    },\n",
     "    'alpha':{\n",
-    "        'range': [1,2,3]\n",
+    "        'range': [1,2,3],\n",
+    "        'title': 'α'\n",
     "    },\n",
     "    'beta':{\n",
-    "        'range': [0,1,2,3]\n",
+    "        'range': [0,1,2,3],\n",
+    "        'title': 'β'\n",
     "    },\n",
     "    'K':{\n",
     "        'range': [1,2,3]\n",
@@ -2168,7 +2162,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### plot"
+    "### Plot"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### plot specific values"
    ],
    "metadata": {
     "collapsed": false,
@@ -2182,58 +2188,49 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "grid_kwargs = dict(sharex=False, sharey=False, margin_titles=True, legend_out=True)\n",
-    "kde_kwargs = dict(bw=0.01)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "#@title choose df { run: \"auto\", vertical-output: true }\n",
+    "grid_kwargs = dict(sharex=True, sharey=False,\n",
+    "                   margin_titles=True, legend_out=True)\n",
+    "kde_kwargs = dict(bw=0.01)\n",
     "\n",
-    "N = 1000 #@param {type:\"integer\"}\n",
-    "m = 10 #@param {type:\"integer\"}\n",
-    "α = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
-    "K = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
-    "log10ε = -2 #@param {type:\"slider\", min:-3, max:0, step:-1}\n",
-    "ε = 1**log10ε\n",
-    "Υ = 2.1 #@param {type:\"slider\", min:0, max:3, step:0.1}\n",
-    "β = 3 #@param {type:\"slider\", min:0, max:5, step:0.5}\n",
-    "r = 0.5 #@param {type:\"slider\", min:0, max:1, step:0.1}\n",
+    "defaults = {\n",
+    "    'D': 'col',\n",
+    "    'sample_size': 'row',\n",
+    "    'm': 10,\n",
+    "    'alpha': 3,\n",
+    "    'K': 3,\n",
+    "    'beta': 3,\n",
+    "    'r': 0.5\n",
+    "}\n",
+    "import ipywidgets as widgets\n",
+    "pickers = {}\n",
+    "for key in other_vars:\n",
+    "    unique = df[key].unique()\n",
+    "    desc = other_vars[key]['title'] if 'title' in other_vars[key] else key\n",
+    "    pickers[key] = widgets.Dropdown(description=desc,\n",
+    "                                    options=list(unique)+['col', 'row', 'hue'], value=defaults[key])\n",
     "\n",
-    "default_df = df[np.logical_and(df['N'] == 1000,\n",
-    "                               df['m'] == 10,\n",
-    "                               df['alpha'] == 3,\n",
-    "                               df['K'] == 2,\n",
-    "                               df['beta'] == 3,\n",
-    "                               df['r'] == 0.5,\n",
-    "                               )]\n",
-    "\n",
-    "default_df.shape"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "g = show_opinion_grid(default_df,\n",
-    "                      ['D','sample_size'], grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
-    "g.add_legend(fontsize='large')"
+    "def f(**kwargs):\n",
+    "    out.clear_output()\n",
+    "    N_val = kwargs.pop('N', 1000)\n",
+    "    mask = df['N'] == N_val\n",
+    "    columns = []\n",
+    "    for key, value in kwargs.items():\n",
+    "        if value in ['col', 'row', 'hue']:\n",
+    "            if value == 'col':\n",
+    "                columns.insert(0, key)\n",
+    "            elif value == 'row':\n",
+    "                columns.insert(1, key)\n",
+    "            else:\n",
+    "                columns.append(key)\n",
+    "            continue\n",
+    "        mask = np.logical_and(mask, df[key] == value)\n",
+    "    default_df = df[mask]\n",
+    "    print(\"plotting\")\n",
+    "    g = show_opinion_grid(default_df, columns,\n",
+    "                          grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
+    "    g.add_legend()\n",
+    "out = widgets.interactive_output(f, pickers)\n",
+    "widgets.VBox([widgets.HBox(list(pickers.values())), out])\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -2264,20 +2261,6 @@
    "source": [
     "g = sns.relplot(x=\"opinion\", y=\"D\", hue=\"sample_size\", size=\"alpha\", style=\"beta\",\n",
     "                kind='scatter', data=df)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "g = sns.pairplot(df, vars=[\"opinion\"]+list(other_vars.keys()), corner=True)"
    ],
    "metadata": {
     "collapsed": false,
