created scripts folder for parameter sweeps improved caching compression and created shared .cache folder (instead of depending where it run) use HDFstore with 'table' format for appending data in `run_product` simulations refactored some metrics to a `metrics.opinions.py` file implemented distribution metric

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2210,7 +2210,10 @@
     "                                    options=list(unique)+['col', 'row', 'hue'], value=defaults[key])\n",
     "\n",
     "def f(**kwargs):\n",
-    "    out.clear_output()\n",
+    "    try:\n",
+    "        out.clear_output()\n",
+    "    except:\n",
+    "        pass\n",
     "    N_val = kwargs.pop('N', 1000)\n",
     "    mask = df['N'] == N_val\n",
     "    columns = []\n",
