corrected notebook imports add EchoChamber objects to a list in run_product *only* if no caching is happening. Can lead to large memory footprint, but prevents wasted computation. moved writing to file mapping into the parallel loop to have save closing if simulation is interrupted.

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -91,8 +91,8 @@
     "    # add to path\n",
     "    import sys\n",
     "    sys.path.append('./temp')\n",
-    "    # need latest tqdm version for tenumerate\n",
-    "    !pip install -q --upgrade tqdm\n",
+    "    # need latest tqdm version for tenumerate and tables to prevent HDF read error\n",
+    "    !pip install -q --upgrade tqdm tables\n",
     "    # create symlink between a Drive folder and the cache for persistence between sessions\n",
     "    import os\n",
     "    try:\n",
@@ -155,7 +155,7 @@
     "    import opdynamics.simulation as Simulation\n",
     "except AttributeError:\n",
     "    raise RuntimeError(\"restart runtime\")\n",
-    "from opdynamics.dynamics.echochamber import (EchoChamber, ConnChamber, ContrastChamber, OpenChamber, SampleChamber,\n",
+    "from opdynamics.networks.echochamber import (EchoChamber, ConnChamber, ContrastChamber, OpenChamber, SampleChamber,\n",
     "                                             logger as eclogger,\n",
     "                                             )\n",
     "from opdynamics.visualise import (VisEchoChamber,\n",
