define and plot distribution metric

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -2262,58 +2262,44 @@
    "outputs": [],
    "source": [
     "logging_level = logging.getLogger().getEffectiveLevel()\n",
+    "eclogger.setLevel(logging.INFO)\n",
     "logging.getLogger().setLevel(logging.WARNING)\n",
-    "kwargs = dict(N=1000,\n",
-    "              m=10,\n",
-    "              T=10,\n",
-    "              epsilon=1e-2,\n",
-    "              gamma=2.1,\n",
-    "              dt=0.01,\n",
-    "              K=2,\n",
-    "              beta=1,\n",
-    "              alpha=3,\n",
-    "              r=0.65,\n",
-    "              cls=SampleChamber,\n",
-    "              method='Euler'\n",
-    "             )\n",
     "\n",
-    "D_range = np.round(np.arange(0.0, 5.0001, 1), 3)\n",
+    "parameters = dict(\n",
+    "    N=1000,\n",
+    "    m=10,\n",
+    "    T=10.0,\n",
+    "    epsilon=1e-2,\n",
+    "    gamma=2.1,\n",
+    "    dt=0.01,\n",
+    "    K=3,\n",
+    "    beta=3,\n",
+    "    alpha=3,\n",
+    "    r=0.5,\n",
+    "    cls=SampleChamber,\n",
+    "    method=\"Euler\",\n",
+    ")\n",
     "\n",
-    "parameters = {\n",
-    "    'D':{\n",
-    "        'range': D_range,\n",
-    "        'title': 'D',\n",
-    "    },\n",
-    "    'sample_size':{\n",
-    "        'range':[1, 25, 50, 100],\n",
-    "        'title':'n',\n",
-    "    },\n",
-    "    'm':{\n",
-    "        'range':[1, 10, 20],\n",
-    "    },\n",
-    "    'alpha':{\n",
-    "        'range': [1,2,3],\n",
-    "        'title': 'α'\n",
-    "    },\n",
-    "    'beta':{\n",
-    "        'range': [0,1,2,3],\n",
-    "        'title': 'β'\n",
-    "    },\n",
-    "    'K':{\n",
-    "        'range': [1,2,3]\n",
-    "    },\n",
-    "    'r':{\n",
-    "        'range': [0,0.5,1]\n",
-    "    }\n",
+    "D_range = np.round(np.arange(0.0, 5.0001, 0.1), 3)\n",
+    "\n",
+    "sample_size_range = np.arange(1, 50.0001, 1, dtype=int)\n",
+    "\n",
+    "range_variables = {\n",
+    "    \"D\": {\"range\": D_range, \"title\": \"D\"},\n",
+    "    \"sample_size\": {\"range\": sample_size_range, \"title\": \"n\"},\n",
+    "    \"alpha\": {\"range\": [1, 2, 3], \"title\": \"α\"},\n",
+    "    \"beta\": {\"range\": [0, 1, 2, 3], \"title\": \"β\"},\n",
+    "    \"K\": {\"range\": [1, 2, 3]},\n",
     "}\n",
     "\n",
-    "noise_start = 0\n",
-    "\n",
-    "df = Simulation.run_product(parameters,\n",
-    "                            noise_start=noise_start,\n",
-    "                            cache=False,\n",
-    "                            cache_sim=True,\n",
-    "                            **kwargs)\n",
+    "df = Simulation.run_product(\n",
+    "    range_variables,\n",
+    "    noise_start=0,\n",
+    "    cache=True,\n",
+    "    cache_sim=True,\n",
+    "    parallel=True,\n",
+    "    **parameters\n",
+    ")\n",
     "logging.getLogger().setLevel(logging_level)"
    ],
    "metadata": {
@@ -2341,10 +2327,7 @@
     "#### plot specific values"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
