added docs changes to running and plotting ``run_product`` to use ``vaex`` DataFrames

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -44,12 +44,16 @@
     "1. mount your Google Drive (by asking for an authorization code)\n",
     "1. pull the latest version of ``opinion_dynamics`` from GitHub\n",
     "1. add ``opinion_dynamics`` to path\n",
-    "1. install latest ``tqdm`` for ``tenumerate`` function.\n",
+    "1. install/upgrade packages\n",
+    "    - upgrade ``tqdm`` for ``tenumerate`` function\n",
+    "    - upgrade ``tables`` for appending to `hdf5` files without throwing an error.\n",
+    "    - ``vaex`` for large file reading without crashing the session\n",
+    "        - upgrade ``IPython`` for ``vaex`` [see #514](https://github.com/vaexio/vaex/issues/514)\n",
     "1. make `.cache` and `.output` in your Google Drive under `My Drive > Colab Notebooks > opdynamics`\n",
     "1. create symlinks between Colab's temporary local `.cache` and `.output` and the Google Drive folders for persistence\n",
     "\n",
     "> Note:\n",
-    "> 1. After installing ``tqdm`` it may ask you to restart runtime. You probably don't have to, but if a cell gives an error about ``tenumerate``, just restart the runtime.\n",
+    "> 1. After installing packages it **must** restart runtime.\n",
     "> 1. Creating symlinks will fail when running the cell again. This is expected."
    ],
    "metadata": {
@@ -93,6 +97,7 @@
     "    sys.path.append('./temp')\n",
     "    # need latest tqdm version for tenumerate and tables to prevent HDF read error\n",
     "    !pip install -q --upgrade tqdm tables\n",
+    "    !pip install -q --upgrade vaex IPython\n",
     "    # create symlink between a Drive folder and the cache for persistence between sessions\n",
     "    import os\n",
     "    try:\n",
@@ -166,7 +171,7 @@
     "                                  show_opinion_grid,\n",
     "                                  )\n",
     "from opdynamics.utils.distributions import negpowerlaw\n",
-    "from opdynamics.utils.plot_utils import move_cbar_label_to_title\n",
+    "from opdynamics.utils.plot_utils import df_multi_mask, move_cbar_label_to_title\n",
     "from opdynamics.utils.constants import *\n",
     "\n",
     "try:\n",
@@ -2322,6 +2327,20 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plot_surfaces(df, \"D\", \"sample_size\", parameters, range_variables)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "#### plot specific values"
@@ -2339,20 +2358,42 @@
     "                   margin_titles=True, legend_out=True)\n",
     "kde_kwargs = dict(bw=0.01)\n",
     "\n",
+    "# choose a subset of D and sample_size to import\n",
+    "D_range = D_range[::2]\n",
+    "\n",
+    "sample_size_range = sample_size_range[::10]\n",
+    "\n",
+    "range_variables = {\n",
+    "    \"D\": {\"range\": D_range, \"title\": \"D\"},\n",
+    "    \"sample_size\": {\"range\": sample_size_range, \"title\": \"n\"},\n",
+    "    \"alpha\": {\"range\": [1, 2, 3], \"title\": \"α\"},\n",
+    "    \"beta\": {\"range\": [0, 1, 2, 3], \"title\": \"β\"},\n",
+    "    \"K\": {\"range\": [1, 2, 3]},\n",
+    "}\n",
+    "\n",
+    "sub_df = Simulation.run_product(\n",
+    "    range_variables,\n",
+    "    noise_start=0,\n",
+    "    cache=True,\n",
+    "    cache_sim=True,\n",
+    "    parallel=True,\n",
+    "    **parameters\n",
+    ")\n",
+    "\n",
     "defaults = {\n",
     "    'D': 'col',\n",
     "    'sample_size': 'row',\n",
-    "    'm': 10,\n",
     "    'alpha': 3,\n",
     "    'K': 3,\n",
     "    'beta': 3,\n",
-    "    'r': 0.5\n",
     "}\n",
     "import ipywidgets as widgets\n",
     "pickers = {}\n",
-    "for key in parameters:\n",
-    "    unique = df[key].unique()\n",
-    "    desc = parameters[key]['title'] if 'title' in parameters[key] else key\n",
+    "for key in range_variables:\n",
+    "  if key in sub_df.columns:\n",
+    "    print(key)\n",
+    "    unique = sub_df[key].unique()\n",
+    "    desc = range_variables[key]['title'] if 'title' in range_variables[key] else key\n",
     "    pickers[key] = widgets.Dropdown(description=desc,\n",
     "                                    options=list(unique)+['col', 'row', 'hue'], value=defaults[key])\n",
     "\n",
@@ -2361,8 +2402,6 @@
     "        out.clear_output()\n",
     "    except:\n",
     "        pass\n",
-    "    N_val = kwargs.pop('N', 1000)\n",
-    "    mask = df['N'] == N_val\n",
     "    columns = []\n",
     "    for key, value in kwargs.items():\n",
     "        if value in ['col', 'row', 'hue']:\n",
@@ -2373,14 +2412,14 @@
     "            else:\n",
     "                columns.append(key)\n",
     "            continue\n",
-    "        mask = np.logical_and(mask, df[key] == value)\n",
-    "    default_df = df[mask]\n",
+    "    default_kwargs = {k: v for k, v in kwargs.items() if k not in columns}\n",
+    "    default_df = df_multi_mask(sub_df, default_kwargs)\n",
     "    print(\"plotting\")\n",
     "    g = show_opinion_grid(default_df, columns,\n",
     "                          grid_kwargs=grid_kwargs, kde_kwargs=kde_kwargs)\n",
     "    g.add_legend()\n",
     "out = widgets.interactive_output(f, pickers)\n",
-    "widgets.VBox([widgets.HBox(list(pickers.values())), out])\n"
+    "widgets.VBox([widgets.HBox(list(pickers.values())), out])"
    ],
    "metadata": {
     "collapsed": false,
