Changes to interpolating of plot_surfaces

--- a/opdynamics.ipynb
+++ b/opdynamics.ipynb
@@ -77,6 +77,7 @@
    },
    "source": [
     "#@title Colab Setup { display-mode: \"form\" }\n",
+    "from opdynamics.visualise.dense import plot_surfaces\n",
     "try:\n",
     "    # connect GDrive for retrieving/saving results\n",
     "    from google.colab import drive\n",
@@ -2331,7 +2332,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "plot_surfaces(df, \"D\", \"sample_size\", parameters, range_variables)"
+    "plot_surfaces(df, \"D\", \"sample_size\", parameters, range_variables)\n",
+    "plt.gcf().savefig(os.path.join(\"output\",\"d_sample_surface.pdf\"))"
    ],
    "metadata": {
     "collapsed": false,
@@ -2391,7 +2393,6 @@
     "pickers = {}\n",
     "for key in range_variables:\n",
     "  if key in sub_df.columns:\n",
-    "    print(key)\n",
     "    unique = sub_df[key].unique()\n",
     "    desc = range_variables[key]['title'] if 'title' in range_variables[key] else key\n",
     "    pickers[key] = widgets.Dropdown(description=desc,\n",
